web/Kubernetes/ingress-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: ingress-nginx-controller-nodeport
  namespace: ingress-nginx
spec: 
  ports:
  - name: http
    nodePort: 31000
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: NodePort
