web/Kubernetes/slam-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turtlebot3-slam
  labels:
    app: ros1
    node: slam
spec:
  replicas: 1
  selector: 
    matchLabels:
      node: slam
  template:
    metadata:
      labels:
        node: slam
    spec:
      containers:
      - name: slam
        tty: true
        image: namgungjaeseon/ros-noetic
        command: ["/bin/bash", "-c"]
        args: ["source /opt/ros/noetic/setup.bash && source ~/catkin_ws/devel/setup.bash && export TURTLEBOT3_MODEL=burger && roslaunch turtlebot3_slam turtlebot3_slam.launch"]
        imagePullPolicy: IfNotPresent
        tty: true
        volumeMounts:
        - name: x11-socket
          mountPath: /tmp/.X11-unix
      volumes:
      - name: x11-socket
        hostPath:
          path: /tmp/.X11-unix
          type: Directory
---
apiVersion: v1
kind: Service
metadata: 
  name: slam-service
  labels:
    app: ros1
    node: slam
spec:
  clusterIP: None
  selector: 
    node: slam
