web/Kubernetes/springboot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: spring-boot-deployment
    labels: 
      app: web
      node: spring-boot
spec:
  replicas: 1
  selector:
    matchLabels:
      node: spring-boot
  template:
    metadata:
      labels:
        node: spring-boot
    spec:
      containers:
      - name: spring-boot
        image: namgungjaeseon/ros-web
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: springbootport
---
apiVersion: v1
kind: Service
metadata: 
  name: springboot-service
  labels: 
    app: web
    node: spring-boot
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP    
      name: http
      nodePort: 30000
  selector:
    node: spring-boot
